--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -75,4 +75,7 @@ dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:0.17.+"
+
+    compile project(":react-native-camera")
+    compile fileTree(dir: "node_modules/react-native-camera/android/libs", include: ["*.jar"])
 }
