--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "react-native": "^0.17.0",
+    "react-native-camera": "^0.6.0",
     "react-native-drawer": "^1.4.2",
     "react-native-viewpager": "^0.1.6",
     "react-timer-mixin": "^0.13.3"
